--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Real-time Quiz Buzzer application",
   "main": "server.js",
   "scripts": {
-    "start": "npm run build && node server.js",
+    "start": "node server.js",
     "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
